--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
     ],
     "require": {
         "php": "^8.2",
+        "illuminate/contracts": "*",
+        "illuminate/database": "*",
         "illuminate/support": "*"
     },
     "require-dev": {
@@ -34,7 +36,7 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit",
+        "test": "@php ./vendor/bin/phpunit",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
 
     },
